Improve Bootstrap logging (#230)
* improve Bootstrap logging

* improved publisher logging